<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.activity.KompetensiActivity"
    android:background="@drawable/bg2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:text="KOMPETENSI"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/line1"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/ivK1"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_k1" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:text="@string/kompetensi_inti"
                android:maxLines="2"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/ivK2"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_k2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:text="@string/kompetensi_dasar"
                android:maxLines="2"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line3"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/ivK3"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_k3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:text="@string/tujuan_pembelajaran"
                android:maxLines="2"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom"
            android:scaleType="fitXY"
            android:src="@drawable/ic_home" />
    </LinearLayout>

</RelativeLayout>